--- a/src/sass/partials/_grid.scss
+++ b/src/sass/partials/_grid.scss
@@ -13,6 +13,10 @@
     border-left: 1px solid $blue;
     border-right: 1px solid $blue;
 
+    @include mq(tablet) {
+        margin: auto;
+    }
+
     @include mq(desktop) {
         grid: calc(100vh + 200px) / 170px 50px 230px 230px 230px;
         grid-column-gap: 10px;
