--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -1,17 +1,5 @@
-@keyframes fade {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
 header .container {
-    animation: fade 0.4s linear 1 forwards;
-    animation-delay: 1s;
-
-    @include mq($until: desktop) {
+    @include mq($until: tablet) {
         padding-right: 70px;
     }
 
@@ -50,6 +38,10 @@ header .container {
     font-size: $font-size-body;
     line-height: $line-height-body;
     font-weight: normal;
+
+    @include mq(tablet) {
+        width: 640px;
+    }
 
     @include mq(desktop) {
         margin: 0;
